# loom

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  NEXT-MOVES-CORRECTED.md  NEXT-MOVES.md  README.md
.claude/: settings.local.json
.githooks/: pre-commit
crates/jitos-core/: Cargo.toml
crates/jitos-core/src/: canonical.rs  delta.rs  events.rs  lib.rs
crates/jitos-core/tests/: canonical_encoding_tests.rs
crates/jitos-graph/: Cargo.toml
crates/jitos-planner/: Cargo.toml
crates/jitos-scheduler/: Cargo.toml
crates/jitos-views/: Cargo.toml
docs/: DOCS-GOVERNANCE.md  GLOSSARY-ROSETTA.md  INDEX.md  THEORY.md  TOUR.md  WHITEPAPER.md
docs/ADR/: ADR-0001.md  ADR-0002.md  ADR-0006.md  ADR-0007.md
docs/ARCH/: ARCH-0000-INTEGRATED-SPEC.md  ARCH-0000-ToC.md  ARCH-0001-universal-job-fabric.md  ARCH-0001.md  ARCH-0002-architectural-invariants.md  ARCH-0002.md  ARCH-0003.md  ARCH-0004.md  ARCH-0007.md  ARCH-0008.md  ARCH-0009-time-and-counterfactuals.md  ARCH-0010-slice-theorem.md
docs/REPORTS/: README.md  SOTU-2025-content.tex  SOTU-2025-dark.tex  SOTU-2025-expanded.tex  SOTU-2025-print.tex  SOTU-2025.tex  build.sh
docs/RFC/: CFL.md  RFC-0001.md  RFC-0002.md  RFC-0003.md  RFC-0004.md  RFC-0005.md  RFC-0006.md  RFC-0007.md  RFC-0008.md  RFC-0009.md  RFC-0010.md  RFC-0011.md  RFC-0012.md  RFC-0013.md  RFC-0014.md  RFC-0015.md  RFC-0016.md  RFC-0017.md  RFC-0018.md  RFC-0019.md  RFC-0020.md  RFC-0021.md  RFC-0022-materialized-time-and-io.md
docs/ROADMAP/: AUTOMATION.md  README.md
docs/SPECS/: .markdownlint-justification.md  SPEC-0001-canonical-encoding.md  SPEC-0002-deltaspec.md  SPEC-0004-timer-semantics.md  SPEC-0005-deterministic-ids.md  SPEC-NET-0001-graphql-sdl-v0.md  SPEC-WARP-0001-graph-commit-digest.md  SPEC-WARP-0002-incremental-graph-hash.md
docs/UNORGANIZED/: GraphQL-SDL.md  Invariants.md  JITOS is now Loom - first draft.md  THE-CORE.md  The Kernel.md  jitos kernel.md
docs/architecture/: 001.md  002.md  004.md  005.md  007.md  ToC.md
docs/computer/: 001-Table of Contents.md  002-introduction.md  003-chapter-001.md  004-chapter-002.md  005-chapter-003.md  006-chapter-004.md  007-part-2-intro.md  008-chapter-005.md  009-chapter-006.md  010-chapter-007.md  011-chapter-008.md  012-part-3-intro.md  013-chapter-009.md  (+5 more)
scripts/: smoke_m1_graphql.py  update_roadmap_dags.py
xtask/: Cargo.toml
(+292 files in other folders)
