[workspace]
resolver = "2"

members = [
    "crates/jitos-core",
    "crates/jitos-graph",
    "crates/jitos-scheduler",
    "crates/jitos-views",       # Phase 0.5.4
    "crates/jitos-planner",     # Phase 3.1
    # TODO: Add remaining crates as they are created per NEXT-MOVES.md:
    # "crates/jitos-provenance",  # Phase 4.1
    # "crates/jitos-resilience",  # Phase 2.2
    # "crates/jitos-io",          # Phase 4.2
    # "crates/jitos-daemon",      # Phase 5.1
    # "crates/jitos-wasm",        # Phase 3.2
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["James Ross <james@flyingrobots.dev>"]
license = "Apache-2.0"
repository = "https://github.com/flyingrobots/jitos"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ciborium = "0.2"
blake3 = "1.5"
hex = "0.4"
rhai = "1.23.6"
wasm-bindgen = "0.2"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
slotmap = { version = "1.0", features = ["serde"] }
petgraph = "0.6"
